# trackerr-ia

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
benchmark/: benchmark.py
benchmark/providers/: __init__.py  base.py  claude_provider.py  factory.py  groq_provider.py  perplexity_provider.py
models/: models.py
tests/: test_chat_endpoint.py  test_groq_provider.py  test_providers.py
